mobile style done. Found another bug - state on mobile problem

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -14,6 +14,9 @@
     --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     --yellow-shadow: 10px 10px 50px rgba(200, 255, 0, 0.938);
+    --blue-shadow: 0 5px 15px rgba(3, 48, 131, 0.2);
+    --yellow-gradient: linear-gradient(90deg, rgba(255, 255, 210, 1) 0%, rgba(255, 242, 153, 1) 100%, rgba(255, 229, 127, 1) 100%);
+    --pink-gradient:linear-gradient( 90deg, rgba(253, 244, 255, 1) 0%, rgba(255, 190, 242, 1) 100%, rgba(244, 133, 221, 1) 100% );
 }
 
 body {
@@ -51,7 +54,7 @@ button {
 .container {
     z-index: -2;
     color: #333;
-    background: linear-gradient( 90deg, rgba(253, 244, 255, 1) 0%, rgba(255, 190, 242, 1) 100%, rgba(244, 133, 221, 1) 100% );
+    background: var(--pink-gradient);
     box-shadow: var(--light-shadow);
     display: flex;
     justify-content: space-evenly;
@@ -69,6 +72,7 @@ section {
     margin-bottom: 20px;
     align-self:self-start;
 }
+
 
 /* ALERT /////////////////////////////////////////////////////////////////////*/
 
@@ -152,7 +156,7 @@ h3 {
 
 
 .title {
-    width: 100%;
+    width: 81%;
     background-color: var(--secondary-color);
     color: #000000;
     text-align: left;
@@ -239,12 +243,6 @@ h3 {
 }
 /* Bag /////////////////////////////////////////////////////////////////////////*/
 
-
-/* .edit-title {
-    align-self: center;
-} */
-
-
 .open-bag {
     background-color: var(--bag-color);
     border: none;
@@ -274,8 +272,63 @@ h3 {
     box-shadow: var(--yellow-shadow);
 }
 
+/* FOOTER */
+
+footer {
+    z-index: 3;
+    position: sticky;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 5vh;
+    background-color: var(--bag-color);
+    display: flex;
+    justify-content: center;
+}
+
+.section-switch {
+    background-color: var(--bag-color);
+    box-shadow: var(--blue-shadow);
+    border-radius: var(--border-radius);
+    border: none;
+    width: 40%;
+    height: 100%;
+}
+
+.section-switch:active {
+    background-color: var(--yellow-color);
+}
+
+.display-none {
+    display: none;
+}
 
 
+@media (max-width: 1400px) {
+    .bag-form {
+        display: none;
+    }
 
-@media (max-width: 768px) {}
-@media (min-width: 768px) {}
+    .container {
+        flex-direction: column;
+        min-height: 95vh;
+    }
+
+    section {
+        background-color: #ffffff;
+        width: 100%;
+        max-width: 600px;
+        min-height: 700px;
+        border-radius: var(--border-radius);
+        margin: 20px auto;
+    }
+
+    .bag {
+        display: none;
+    }
+}
+@media (min-width: 1400px) {
+    footer {
+        display: none;
+    }
+}
